@@ -1,7 +1,7 @@
 package com.trustek.config;
 
 import com.trustek.security.JwtAuthenticationFilter;
-import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -20,10 +20,10 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 /**
  * Spring Security Configuration
+ * Supports optional authentication based on app.auth.required property
  */
 @Configuration
 @EnableWebSecurity
@@ -31,6 +31,9 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final com.trustek.security.CustomUserDetailsService customUserDetailsService;
+    
+    @Value("${app.auth.required:true}")
+    private boolean authRequired;
     
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter, com.trustek.security.CustomUserDetailsService customUserDetailsService) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
@@ -42,16 +45,32 @@ public class SecurityConfig {
         http
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/register", "/api/auth/login").permitAll()
-                        .requestMatchers("/api/fake-news/**", "/api/ml/**").authenticated()
-                        .anyRequest().authenticated()
-                )
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+        // Configure authorization based on authRequired setting
+        if (authRequired) {
+            // Require authentication for fake-news and ml endpoints
+            http.authorizeHttpRequests(auth -> auth
+                    .requestMatchers("/api/auth/register", "/api/auth/login").permitAll()
+                    .requestMatchers("/api/health", "/health").permitAll() // Health check is public
+                    .requestMatchers("/api/fake-news/**", "/api/ml/**").authenticated()
+                    .requestMatchers("/error", "/actuator/**").permitAll()
+                    .anyRequest().authenticated()
+            );
+        } else {
+            // Allow anonymous access to fake-news endpoints
+            http.authorizeHttpRequests(auth -> auth
+                    .requestMatchers("/api/auth/register", "/api/auth/login").permitAll()
+                    .requestMatchers("/api/health", "/health").permitAll() // Health check is public
+                    .requestMatchers("/api/fake-news/**", "/api/ml/**").permitAll()
+                    .requestMatchers("/error", "/actuator/**").permitAll()
+                    .anyRequest().authenticated()
+            );
+        }
 
         return http.build();
     }
@@ -77,11 +96,27 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:8081", "http://localhost:5173", "http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Allow multiple origins including production deployments
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:8080",  // Frontend port
+            "http://localhost:8081",  // Alternative frontend port
+            "http://localhost:5173",  // Vite dev server
+            "http://localhost:3000",   // React dev server
+            "http://127.0.0.1:8080",
+            "http://127.0.0.1:8081",
+            "http://127.0.0.1:5173",
+            "http://127.0.0.1:3000"
+        ));
+        // Allow all HTTP methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"));
+        // Allow all headers (needed for Authorization header and Content-Type)
         configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        // Expose Authorization header to frontend
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        // Allow credentials (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        // Cache preflight response for 1 hour
+        configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
